target/generated-sources/antlr4/goParser.cpp

    #include <map>
    #include "intermediate/symtab/Symtab.h"
    #include "intermediate/type/Typespec.h"
    using namespace intermediate::symtab;
    using namespace intermediate::type;


// Generated from go.g4 by ANTLR 4.7.2


#include "goVisitor.h"

#include "goParser.h"


using namespace antlrcpp;
using namespace antlr4;

goParser::goParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

goParser::~goParser() {
  delete _interpreter;
}

std::string goParser::getGrammarFileName() const {
  return "go.g4";
}

const std::vector<std::string>& goParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& goParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

goParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

goParser::ProgramHeaderContext* goParser::ProgramContext::programHeader() {
  return getRuleContext<goParser::ProgramHeaderContext>(0);
}

goParser::BlockContext* goParser::ProgramContext::block() {
  return getRuleContext<goParser::BlockContext>(0);
}


size_t goParser::ProgramContext::getRuleIndex() const {
  return goParser::RuleProgram;
}


antlrcpp::Any goParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

goParser::ProgramContext* goParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, goParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(168);
    programHeader();
    setState(169);
    block();
    setState(170);
    match(goParser::T__0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramHeaderContext ------------------------------------------------------------------

goParser::ProgramHeaderContext::ProgramHeaderContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* goParser::ProgramHeaderContext::PACKAGE() {
  return getToken(goParser::PACKAGE, 0);
}

goParser::ProgramIdentifierContext* goParser::ProgramHeaderContext::programIdentifier() {
  return getRuleContext<goParser::ProgramIdentifierContext>(0);
}


size_t goParser::ProgramHeaderContext::getRuleIndex() const {
  return goParser::RuleProgramHeader;
}


antlrcpp::Any goParser::ProgramHeaderContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitProgramHeader(this);
  else
    return visitor->visitChildren(this);
}

goParser::ProgramHeaderContext* goParser::programHeader() {
  ProgramHeaderContext *_localctx = _tracker.createInstance<ProgramHeaderContext>(_ctx, getState());
  enterRule(_localctx, 2, goParser::RuleProgramHeader);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(172);
    match(goParser::PACKAGE);
    setState(173);
    programIdentifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramIdentifierContext ------------------------------------------------------------------

goParser::ProgramIdentifierContext::ProgramIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* goParser::ProgramIdentifierContext::IDENTIFIER() {
  return getToken(goParser::IDENTIFIER, 0);
}


size_t goParser::ProgramIdentifierContext::getRuleIndex() const {
  return goParser::RuleProgramIdentifier;
}


antlrcpp::Any goParser::ProgramIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitProgramIdentifier(this);
  else
    return visitor->visitChildren(this);
}

goParser::ProgramIdentifierContext* goParser::programIdentifier() {
  ProgramIdentifierContext *_localctx = _tracker.createInstance<ProgramIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 4, goParser::RuleProgramIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(175);
    match(goParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

goParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

goParser::DeclarationsContext* goParser::BlockContext::declarations() {
  return getRuleContext<goParser::DeclarationsContext>(0);
}

goParser::CompoundStatementContext* goParser::BlockContext::compoundStatement() {
  return getRuleContext<goParser::CompoundStatementContext>(0);
}


size_t goParser::BlockContext::getRuleIndex() const {
  return goParser::RuleBlock;
}


antlrcpp::Any goParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

goParser::BlockContext* goParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 6, goParser::RuleBlock);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(177);
    declarations();
    setState(178);
    compoundStatement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationsContext ------------------------------------------------------------------

goParser::DeclarationsContext::DeclarationsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

goParser::ConstantsPartContext* goParser::DeclarationsContext::constantsPart() {
  return getRuleContext<goParser::ConstantsPartContext>(0);
}

goParser::TypesPartContext* goParser::DeclarationsContext::typesPart() {
  return getRuleContext<goParser::TypesPartContext>(0);
}

goParser::VariablesPartContext* goParser::DeclarationsContext::variablesPart() {
  return getRuleContext<goParser::VariablesPartContext>(0);
}

goParser::RoutinesPartContext* goParser::DeclarationsContext::routinesPart() {
  return getRuleContext<goParser::RoutinesPartContext>(0);
}


size_t goParser::DeclarationsContext::getRuleIndex() const {
  return goParser::RuleDeclarations;
}


antlrcpp::Any goParser::DeclarationsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitDeclarations(this);
  else
    return visitor->visitChildren(this);
}

goParser::DeclarationsContext* goParser::declarations() {
  DeclarationsContext *_localctx = _tracker.createInstance<DeclarationsContext>(_ctx, getState());
  enterRule(_localctx, 8, goParser::RuleDeclarations);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(183);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == goParser::CONST) {
      setState(180);
      constantsPart();
      setState(181);
      match(goParser::T__1);
    }
    setState(188);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == goParser::TYPE) {
      setState(185);
      typesPart();
      setState(186);
      match(goParser::T__1);
    }
    setState(193);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == goParser::VAR) {
      setState(190);
      variablesPart();
      setState(191);
      match(goParser::T__1);
    }
    setState(198);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == goParser::FUNC) {
      setState(195);
      routinesPart();
      setState(196);
      match(goParser::T__1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantsPartContext ------------------------------------------------------------------

goParser::ConstantsPartContext::ConstantsPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* goParser::ConstantsPartContext::CONST() {
  return getToken(goParser::CONST, 0);
}

goParser::ConstantDefinitionsListContext* goParser::ConstantsPartContext::constantDefinitionsList() {
  return getRuleContext<goParser::ConstantDefinitionsListContext>(0);
}


size_t goParser::ConstantsPartContext::getRuleIndex() const {
  return goParser::RuleConstantsPart;
}


antlrcpp::Any goParser::ConstantsPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitConstantsPart(this);
  else
    return visitor->visitChildren(this);
}

goParser::ConstantsPartContext* goParser::constantsPart() {
  ConstantsPartContext *_localctx = _tracker.createInstance<ConstantsPartContext>(_ctx, getState());
  enterRule(_localctx, 10, goParser::RuleConstantsPart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(200);
    match(goParser::CONST);
    setState(201);
    constantDefinitionsList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionsListContext ------------------------------------------------------------------

goParser::ConstantDefinitionsListContext::ConstantDefinitionsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<goParser::ConstantDefinitionContext *> goParser::ConstantDefinitionsListContext::constantDefinition() {
  return getRuleContexts<goParser::ConstantDefinitionContext>();
}

goParser::ConstantDefinitionContext* goParser::ConstantDefinitionsListContext::constantDefinition(size_t i) {
  return getRuleContext<goParser::ConstantDefinitionContext>(i);
}


size_t goParser::ConstantDefinitionsListContext::getRuleIndex() const {
  return goParser::RuleConstantDefinitionsList;
}


antlrcpp::Any goParser::ConstantDefinitionsListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitConstantDefinitionsList(this);
  else
    return visitor->visitChildren(this);
}

goParser::ConstantDefinitionsListContext* goParser::constantDefinitionsList() {
  ConstantDefinitionsListContext *_localctx = _tracker.createInstance<ConstantDefinitionsListContext>(_ctx, getState());
  enterRule(_localctx, 12, goParser::RuleConstantDefinitionsList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(203);
    constantDefinition();
    setState(208);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(204);
        match(goParser::T__1);
        setState(205);
        constantDefinition(); 
      }
      setState(210);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantDefinitionContext ------------------------------------------------------------------

goParser::ConstantDefinitionContext::ConstantDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

goParser::ConstantIdentifierContext* goParser::ConstantDefinitionContext::constantIdentifier() {
  return getRuleContext<goParser::ConstantIdentifierContext>(0);
}

goParser::ConstantContext* goParser::ConstantDefinitionContext::constant() {
  return getRuleContext<goParser::ConstantContext>(0);
}


size_t goParser::ConstantDefinitionContext::getRuleIndex() const {
  return goParser::RuleConstantDefinition;
}


antlrcpp::Any goParser::ConstantDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitConstantDefinition(this);
  else
    return visitor->visitChildren(this);
}

goParser::ConstantDefinitionContext* goParser::constantDefinition() {
  ConstantDefinitionContext *_localctx = _tracker.createInstance<ConstantDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 14, goParser::RuleConstantDefinition);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(211);
    constantIdentifier();
    setState(212);
    match(goParser::T__2);
    setState(213);
    constant();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantIdentifierContext ------------------------------------------------------------------

goParser::ConstantIdentifierContext::ConstantIdentifierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* goParser::ConstantIdentifierContext::IDENTIFIER() {
  return getToken(goParser::IDENTIFIER, 0);
}


size_t goParser::ConstantIdentifierContext::getRuleIndex() const {
  return goParser::RuleConstantIdentifier;
}


antlrcpp::Any goParser::ConstantIdentifierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitConstantIdentifier(this);
  else
    return visitor->visitChildren(this);
}

goParser::ConstantIdentifierContext* goParser::constantIdentifier() {
  ConstantIdentifierContext *_localctx = _tracker.createInstance<ConstantIdentifierContext>(_ctx, getState());
  enterRule(_localctx, 16, goParser::RuleConstantIdentifier);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(215);
    match(goParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ConstantContext ------------------------------------------------------------------

goParser::ConstantContext::ConstantContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* goParser::ConstantContext::IDENTIFIER() {
  return getToken(goParser::IDENTIFIER, 0);
}

goParser::UnsignedNumberContext* goParser::ConstantContext::unsignedNumber() {
  return getRuleContext<goParser::UnsignedNumberContext>(0);
}

goParser::SignContext* goParser::ConstantContext::sign() {
  return getRuleContext<goParser::SignContext>(0);
}

goParser::CharacterConstantContext* goParser::ConstantContext::characterConstant() {
  return getRuleContext<goParser::CharacterConstantContext>(0);
}

goParser::StringConstantContext* goParser::ConstantContext::stringConstant() {
  return getRuleContext<goParser::StringConstantContext>(0);
}


size_t goParser::ConstantContext::getRuleIndex() const {
  return goParser::RuleConstant;
}


antlrcpp::Any goParser::ConstantContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitConstant(this);
  else
    return visitor->visitChildren(this);
}

goParser::ConstantContext* goParser::constant() {
  ConstantContext *_localctx = _tracker.createInstance<ConstantContext>(_ctx, getState());
  enterRule(_localctx, 18, goParser::RuleConstant);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(226);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case goParser::T__3:
      case goParser::T__4:
      case goParser::IDENTIFIER:
      case goParser::INT:
      case goParser::DOUBLE: {
        enterOuterAlt(_localctx, 1);
        setState(218);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == goParser::T__3

        || _la == goParser::T__4) {
          setState(217);
          sign();
        }
        setState(222);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case goParser::IDENTIFIER: {
            setState(220);
            match(goParser::IDENTIFIER);
            break;
          }

          case goParser::INT:
          case goParser::DOUBLE: {
            setState(221);
            unsignedNumber();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

      case goParser::CHAR: {
        enterOuterAlt(_localctx, 2);
        setState(224);
        characterConstant();
        break;
      }

      case goParser::STRING: {
        enterOuterAlt(_localctx, 3);
        setState(225);
        stringConstant();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SignContext ------------------------------------------------------------------

goParser::SignContext::SignContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t goParser::SignContext::getRuleIndex() const {
  return goParser::RuleSign;
}


antlrcpp::Any goParser::SignContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitSign(this);
  else
    return visitor->visitChildren(this);
}

goParser::SignContext* goParser::sign() {
  SignContext *_localctx = _tracker.createInstance<SignContext>(_ctx, getState());
  enterRule(_localctx, 20, goParser::RuleSign);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(228);
    _la = _input->LA(1);
    if (!(_la == goParser::T__3

    || _la == goParser::T__4)) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypesPartContext ------------------------------------------------------------------

goParser::TypesPartContext::TypesPartContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* goParser::TypesPartContext::TYPE() {
  return getToken(goParser::TYPE, 0);
}

goParser::TypeDefinitionsListContext* goParser::TypesPartContext::typeDefinitionsList() {
  return getRuleContext<goParser::TypeDefinitionsListContext>(0);
}


size_t goParser::TypesPartContext::getRuleIndex() const {
  return goParser::RuleTypesPart;
}


antlrcpp::Any goParser::TypesPartContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitTypesPart(this);
  else
    return visitor->visitChildren(this);
}

goParser::TypesPartContext* goParser::typesPart() {
  TypesPartContext *_localctx = _tracker.createInstance<TypesPartContext>(_ctx, getState());
  enterRule(_localctx, 22, goParser::RuleTypesPart);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(230);
    match(goParser::TYPE);
    setState(231);
    typeDefinitionsList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDefinitionsListContext ------------------------------------------------------------------

goParser::TypeDefinitionsListContext::TypeDefinitionsListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<goParser::TypeDefinitionContext *> goParser::TypeDefinitionsListContext::typeDefinition() {
  return getRuleContexts<goParser::TypeDefinitionContext>();
}

goParser::TypeDefinitionContext* goParser::TypeDefinitionsListContext::typeDefinition(size_t i) {
  return getRuleContext<goParser::TypeDefinitionContext>(i);
}


size_t goParser::TypeDefinitionsListContext::getRuleIndex() const {
  return goParser::RuleTypeDefinitionsList;
}


antlrcpp::Any goParser::TypeDefinitionsListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitTypeDefinitionsList(this);
  else
    return visitor->visitChildren(this);
}

goParser::TypeDefinitionsListContext* goParser::typeDefinitionsList() {
  TypeDefinitionsListContext *_localctx = _tracker.createInstance<TypeDefinitionsListContext>(_ctx, getState());
  enterRule(_localctx, 24, goParser::RuleTypeDefinitionsList);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(233);
    typeDefinition();
    setState(238);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(234);
        match(goParser::T__1);
        setState(235);
        typeDefinition(); 
      }
      setState(240);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeDefinitionContext ------------------------------------------------------------------

goParser::TypeDefinitionContext::TypeDefinitionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

goParser::TypeIdentifierContext* goParser::TypeDefinitionContext::typeIdentifier() {
  return getRuleContext<goParser::TypeIdentifierContext>(0);
}

goParser::TypeSpecificationContext* goParser::TypeDefinitionContext::typeSpecification() {
  return getRuleContext<goParser::TypeSpecificationContext>(0);
}


size_t goParser::TypeDefinitionContext::getRuleIndex() const {
  return goParser::RuleTypeDefinition;
}


antlrcpp::Any goParser::TypeDefinitionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<goVisitor*>(visitor))
    return parserVisitor->visitTypeDefinition(this);
  else
    return visitor->visitChildren(this);
}

goParser::TypeDefinitionContext* goParser::typeDefinition() {
  TypeDefinitionContext *_localctx = _tracker.createInstance<TypeDefinitionContext>(_ctx, getState());
  enterRule(_localctx, 26, goParser::RuleTypeDefinition);
